tests/testcases/valid/11_globals_and_storage.ciel
int global_counter = 0;

fn increment() -> void {
    static int calls = 0;
    calls = calls + 1;
    global_counter = global_counter + 1;
}

fn main() -> int {
    increment();
    increment();
    int gc = global_counter;
    return 0;
}
