tests/testcases/invalid/semantic/96_increment_string_literal.ciel
// Error: cannot increment string literal
int main() {
    // Error: string literal is rvalue
    "hello"++;

    return 0;
}
